namespace ServiceDeskLite.Application.Common;

public enum ErrorType
{
    Validation,
    NotFound,
    Conflict,
    DomainViolation,
    Unexpected
}
